# core_midi_gen

original/: main.cpp
phase_1/: CMakeLists.txt  Core_midi_gen.cpp  main.cpp  util.cpp  util.h
phase_2/: Arg_parser.h  CMakeLists.txt  Core_midi_gen.h  main.cpp
phase_3/: Arg_parser.cpp  Arg_parser.h  CMakeLists.txt  Core_midi_gen.cpp  Core_midi_gen.h
phase_4/: CMakeLists.txt  Core_midi_gen.cpp  Core_midi_gen.h
phase_5/: Core_midi_gen.cpp  Core_midi_gen.h  globals.h
phase_6/: Arg_parser.cpp  Arg_parser.h  Au_graph_manager.cpp  Au_graph_manager.h  Core_midi_gen.cpp  Core_midi_gen.h  main.cpp
phase_7/: Arg_parser.cpp  Arg_parser.h  Au_graph_manager.cpp  Au_graph_manager.h  CMakeLists.txt  Core_midi_gen.cpp  Core_midi_gen.h  main.cpp
